--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html, body, #root {
+  height: 100%;
+}
+
+ul, li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #666;
+}
+
+a:visited {
+  color: #666
+}
+
+.App-container {
+  display: flex;
+  height: 100%;
+}
+
+.App-todo {
+  width: 360px;
+  height: 480px;
+  overflow: hidden;
+  margin: auto;
+  border: 1px solid #ccc;
+  border-radius: 1rem;
+  background-color: #fff;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  padding: 25px 20px 20px;
+  background-color: #ebebeb;
 }
 
-.App-link {
-  color: #61dafb;
+.todo-filtered {
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo-filtered li {
+  padding: 0 .5rem;
 }
+
+.todo-filtered a { 
+  position: relative;
+  font-weight: 600;
+}
+
+.todo-filtered .active a::after {
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 100%;
+  height: 2px;
+  content: '';
+  background-color: #666;  
+}
+
+.todo-mode {
+  font-size: 1.4rem;
+  cursor: pointer;
+}
+
+
