--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,8 @@ a:visited {
 }
 
 .App-todo {
+  display: flex;
+  flex-direction: column;
   width: 360px;
   height: 480px;
   overflow: hidden;
@@ -35,40 +37,3 @@ a:visited {
   background-color: #fff;
   text-align: center;
 }
-
-.App-header {
-  display: flex;
-  justify-content: space-between;
-  padding: 25px 20px 20px;
-  background-color: #ebebeb;
-}
-
-.todo-filtered {
-  display: flex;
-}
-
-.todo-filtered li {
-  padding: 0 .5rem;
-}
-
-.todo-filtered a { 
-  position: relative;
-  font-weight: 600;
-}
-
-.todo-filtered .active a::after {
-  position: absolute;
-  left: 0;
-  bottom: -2px;
-  width: 100%;
-  height: 2px;
-  content: '';
-  background-color: #666;  
-}
-
-.todo-mode {
-  font-size: 1.4rem;
-  cursor: pointer;
-}
-
-
