--- a/src/components/TodoHeader.module.css
+++ b/src/components/TodoHeader.module.css
@@ -1,6 +1,7 @@
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 25px 20px 20px;
   border-bottom: 1px solid #ccc;
   background-color: var(--color-bg);
@@ -23,6 +24,7 @@
   background-color: transparent;
   font-weight: 600;
   cursor: pointer;
+  color: var(--color-text);
 }
 
 .filtered .count { 
@@ -30,9 +32,9 @@
   width: 20px;
   height: 16px;
   border-radius: 10px;
-  background-color: var(--color-accent);
+  background-color: var(--color-accent);  
   font-size:.6rem;
-  color: #fff;
+  color: var(--color-accent-text);
   line-height: 16px;
   text-align: center;
 }
@@ -44,26 +46,13 @@
   width: 100%;
   height: 2px;
   content: '';
-  background-color: #666;  
+  background-color: var(--color-text);  
 }
 
 .mode {
-  font-size: 1.4rem;
-  cursor: pointer;
-}
-
-.dark.header {
-  background-color: var(--color-bg-dark);
-}
-
-.dark.header .filtered button { 
-  color: var(--color-dark-accent);
-}
-
-.dark .filtered .active button::after {
-  background-color: #fff;
-}
-
-.dark.header .mode { 
-  color: #fff;
+  width: 20px;
+  height: 20px;
+  font-size: 1.3rem;
+  color: var(--color-accent);
+  font-weight: 600;
 }
