--- a/src/components/TodoLists.module.css
+++ b/src/components/TodoLists.module.css
@@ -1,6 +1,7 @@
 .todolists {
   flex: 1 1 auto;
   padding: 1.5rem 1rem;
+  background-color: var(--color-bg2);
   overflow-y: auto;
 }
 
@@ -22,6 +23,7 @@
 
 .todolists li label {
   flex: 1 1 0%;
+  color: var(--color-text);
   text-align: left;
 }
 
@@ -45,17 +47,4 @@
 
 .todolists .utils button:disabled {
   cursor: default;
-}
-
-.dark.todolists {
-  background-color: var(--color-bg-dark2);
-}
-
-.dark.todolists li {
-  color: #fff;
-}
-
-.dark.todolists .utils button {
-  background-color: rgba(238, 238, 238, .1);
-  color: #fff;
 }
